testing a fix for the 'client says' cards borders on mobile

--- a/output.css
+++ b/output.css
@@ -554,10 +554,6 @@ video {
   --tw-contain-style:  ;
 }
 
-.fixed {
-  position: fixed;
-}
-
 .absolute {
   position: absolute;
 }
@@ -807,10 +803,6 @@ video {
   height: 200px;
 }
 
-.h-\[35\%\] {
-  height: 35%;
-}
-
 .h-\[350px\] {
   height: 350px;
 }
@@ -863,6 +855,10 @@ video {
   width: 300px;
 }
 
+.w-\[40\%\] {
+  width: 40%;
+}
+
 .w-\[40vw\] {
   width: 40vw;
 }
@@ -877,10 +873,6 @@ video {
 
 .w-\[54vw\] {
   width: 54vw;
-}
-
-.w-\[60\%\] {
-  width: 60%;
 }
 
 .w-\[6vw\] {
@@ -905,10 +897,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[100px\] {
-  width: 100px;
 }
 
 .flex-1 {
@@ -1055,9 +1043,9 @@ video {
   background-color: rgb(245 245 245 / var(--tw-bg-opacity));
 }
 
-.bg-blue-500 {
+.bg-black {
   --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -1302,7 +1290,7 @@ p {
 }
 
 .nav-on {
-  top: 0;
+  top: 25%;
   right: 0%;
   transform: translateX(0);
 }
@@ -1479,66 +1467,63 @@ p {
 .border-grad {
   box-sizing: border-box;
   position: relative;
-  background: black;
+  background-color: black;
   border: none;
   height: 450px;
   background-clip: padding-box;
   &:before {
     content: '';
     position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    transform: scale(101%);
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
     z-index: -1;
     border-radius: inherit;
-    background:  linear-gradient(180deg, #707070 0%, #141414 115.5%);
+    background: linear-gradient(180deg, #707070 0%, #141414 115.5%);
+    padding: 2px;
   }
 }
 
 .border-grad2 {
   box-sizing: border-box;
   position: relative;
-  background: black;
+  background-color: black;
   border: none;
   height: 450px;
   background-clip: padding-box;
   &:before {
     content: '';
     position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    transform: scale(101%);
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
     z-index: -1;
     border-radius: inherit;
     background: linear-gradient(180deg, #707070 0%, #141414 115.5%);
+    padding: 2px;
   }
 }
 
 .border-grad3 {
   box-sizing: border-box;
   position: relative;
-  background: black;
+  background-color: black;
   border: none;
   height: 450px;
   background-clip: padding-box;
   &:before {
     content: '';
     position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    transform: scale(101%);
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
     z-index: -1;
     border-radius: inherit;
-    background: linear-gradient(160deg, #707070 0%, #141414 115.5%);
+    background: linear-gradient(180deg, #707070 0%, #141414 115.5%);
+    padding: 2px;
   }
 }
 
@@ -1945,32 +1930,16 @@ footer {
     width: 35vw;
   }
 
+  .md\:w-\[50px\] {
+    width: 50px;
+  }
+
   .md\:w-\[55vw\] {
     width: 55vw;
   }
 
   .md\:w-\[80\%\] {
     width: 80%;
-  }
-
-  .md\:w-\[10px\] {
-    width: 10px;
-  }
-
-  .md\:w-\[15px\] {
-    width: 15px;
-  }
-
-  .md\:w-\[12px\] {
-    width: 12px;
-  }
-
-  .md\:w-\[20px\] {
-    width: 20px;
-  }
-
-  .md\:w-\[50px\] {
-    width: 50px;
   }
 
   .md\:max-w-\[368px\] {
